java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCastOrMethodInvocation58494a-hints.pass
Cast ...o to JButton
Create method methodA(java.lang.Object) in org.netbeans.test.java.hints.CastOrMethodInvocation58494a
